Fix: layout x overflow

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -87,4 +87,5 @@ button {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  overflow-x: hidden;
 }
